--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </p>
 
   <!-- Audio-element voor het belgeluid -->
-  <audio id="bellSound" src="bell.mp3" preload="auto"></audio>
+  <audio id="bellSound" src="491655__bliind__chimes-1.wav" preload="auto"></audio>
 
   <!-- Overlay die verschijnt tijdens een pauze -->
   <div id="pauseOverlay" class="overlay hidden">
