--- a/index.html
+++ b/index.html
@@ -145,3 +145,25 @@
   </script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+  <meta charset="UTF-8" />
+  <title>Random Pauze Tool</title>
+  <!-- Jouw bestaande CSS & andere head-elementen -->
+</head>
+<body>
+  <!-- Jouw bestaande HTML en scriptgedeelte -->
+
+  <!-- Toevoegen van het footer-element voor de credits: -->
+  <footer>
+    <p>
+      Bell sound by 
+      <a href="https://freesound.org/people/_bliind/sounds/491655/" target="_blank" rel="noopener noreferrer">
+        _bliind
+      </a>,
+      used under a Creative Commons license requiring attribution.
+    </p>
+  </footer>
+</body>
+</html>
